# adata-query

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/: CI_CD_SUMMARY.md  CONTRIBUTING.md
.github/workflows/: README.md  pr-check.yml  tests.yml
.swm/: api.8u5hahky.sw.md  swimm.json
adata_query/: __init__.py
adata_query/_core/: __init__.py  _fetcher.py  _formatter.py  _locator.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  fetch.rst  fetcher.rst  format_data.rst  formatter.rst  index.rst  install.rst  locate.rst  locator.rst  quickstart.rst
docs/source/_static/css/: custom.css
notebooks/: anndata_query_tutorial.ipynb
src/adata_query/: __init__.py  __version__.py  _logging.py
src/adata_query/_core/: __init__.py  _fetcher.py  _formatter.py  _locator.py
tests/: README.md  __init__.py  conftest.py  pypi_release_smoke_test.py  test_fetcher.py  test_formatter.py  test_locator.py
